--- a/conf/cmi/core.entity_view_display.paragraph.link_area.default.yml
+++ b/conf/cmi/core.entity_view_display.paragraph.link_area.default.yml
@@ -1,37 +1,37 @@
-uuid: 5a069c61-5095-4d65-812d-8aa56164756f
+uuid: 1e70196a-0c53-4a01-9a58-9e266efad36a
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.link_are.field_description
-    - field.field.paragraph.link_are.field_link_list_title
-    - field.field.paragraph.link_are.field_links
-    - paragraphs.paragraphs_type.link_are
+    - field.field.paragraph.link_area.field_description
+    - field.field.paragraph.link_area.field_link_list_title
+    - field.field.paragraph.link_area.field_links
+    - paragraphs.paragraphs_type.link_area
   module:
     - link
-id: paragraph.link_are.default
+id: paragraph.link_area.default
 targetEntityType: paragraph
-bundle: link_are
+bundle: link_area
 mode: default
 content:
   field_description:
     type: basic_string
-    label: hidden
+    label: above
     settings: {  }
     third_party_settings: {  }
     weight: 0
     region: content
   field_link_list_title:
     type: string
-    label: hidden
+    label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 2
+    weight: 1
     region: content
   field_links:
     type: link
-    label: hidden
+    label: above
     settings:
       trim_length: 80
       url_only: false
@@ -39,7 +39,7 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-    weight: 1
+    weight: 2
     region: content
 hidden:
   search_api_excerpt: true
