--- a/conf/cmi/field.field.node.article.field_content.yml
+++ b/conf/cmi/field.field.node.article.field_content.yml
@@ -14,6 +14,7 @@ dependencies:
     - paragraphs.paragraphs_type.gallery
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.liftup_with_image
+    - paragraphs.paragraphs_type.link_with_icon
     - paragraphs.paragraphs_type.list_of_links
     - paragraphs.paragraphs_type.quote
     - paragraphs.paragraphs_type.remote_video
@@ -51,6 +52,7 @@ settings:
       remote_video: remote_video
       unit_search: unit_search
       events_list: events_list
+      link_with_icon: link_with_icon
       quote: quote
       subheading: subheading
     negate: 0
@@ -115,9 +117,15 @@ settings:
       link:
         weight: 56
         enabled: false
+      link_area:
+        weight: 61
+        enabled: false
       link_internal:
         weight: 57
         enabled: false
+      link_with_icon:
+        weight: 63
+        enabled: true
       list_of_links:
         weight: -23
         enabled: true
