--- a/conf/cmi/language.content_settings.paragraph.link_area.yml
+++ b/conf/cmi/language.content_settings.paragraph.link_area.yml
@@ -1,9 +1,9 @@
-uuid: 6ea2e175-24c5-4be6-9c60-42089d7f1d3b
+uuid: 791f6e41-32d1-48e2-b455-954b036de129
 langcode: en
 status: true
 dependencies:
   config:
-    - paragraphs.paragraphs_type.link_are
+    - paragraphs.paragraphs_type.link_area
   module:
     - content_translation
 third_party_settings:
@@ -11,8 +11,8 @@ third_party_settings:
     enabled: true
     bundle_settings:
       untranslatable_fields_hide: '0'
-id: paragraph.link_are
+id: paragraph.link_area
 target_entity_type_id: paragraph
-target_bundle: link_are
+target_bundle: link_area
 default_langcode: site_default
 language_alterable: true
