THF-326: THF-326: Adde permissions

--- a/conf/cmi/user.role.anonymous.yml
+++ b/conf/cmi/user.role.anonymous.yml
@@ -40,7 +40,9 @@ permissions:
   - 'view paragraph content lead'
   - 'view paragraph content liftup_with_image'
   - 'view paragraph content link'
+  - 'view paragraph content link_area'
   - 'view paragraph content link_internal'
+  - 'view paragraph content link_with_icon'
   - 'view paragraph content list_of_links'
   - 'view paragraph content list_of_links_item'
   - 'view paragraph content mainheading'
