--- a/conf/cmi/user.role.authenticated.yml
+++ b/conf/cmi/user.role.authenticated.yml
@@ -46,15 +46,20 @@ permissions:
   - 'clone news content'
   - 'create paragraph content image_and_card'
   - 'create paragraph content lead'
+  - 'create paragraph content link_with_icon'
   - 'create paragraph content mainheading'
   - 'delete paragraph content image_and_card'
   - 'delete paragraph content lead'
+  - 'delete paragraph content link_area'
+  - 'delete paragraph content link_with_icon'
   - 'delete paragraph content mainheading'
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
   - 'update paragraph content image_and_card'
   - 'update paragraph content lead'
+  - 'update paragraph content link_area'
+  - 'update paragraph content link_with_icon'
   - 'update paragraph content mainheading'
   - 'use advanced search'
   - 'view media'
@@ -82,7 +87,9 @@ permissions:
   - 'view paragraph content lead'
   - 'view paragraph content liftup_with_image'
   - 'view paragraph content link'
+  - 'view paragraph content link_area'
   - 'view paragraph content link_internal'
+  - 'view paragraph content link_with_icon'
   - 'view paragraph content list_of_links'
   - 'view paragraph content list_of_links_item'
   - 'view paragraph content mainheading'
