--- a/conf/cmi/core.entity_view_display.taxonomy_term.event_languages.default.yml
+++ b/conf/cmi/core.entity_view_display.taxonomy_term.event_languages.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.event_languages.field_display_name
     - field.field.taxonomy_term.event_languages.field_language_id
     - taxonomy.vocabulary.event_languages
   module:
@@ -18,6 +19,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_display_name:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 2
     region: content
   field_language_id:
     type: string
