--- a/conf/cmi/search_api.index.event_index.yml
+++ b/conf/cmi/search_api.index.event_index.yml
@@ -5,22 +5,23 @@ dependencies:
   config:
     - field.storage.node.field_end_time
     - field.storage.node.field_event_tags
+    - field.storage.taxonomy_term.field_id
     - field.storage.node.field_id
     - field.storage.node.field_image_alt
     - field.storage.node.field_image_url
     - field.storage.node.field_in_language
-    - field.storage.node.field_short_description
+    - field.storage.taxonomy_term.field_language_id
     - field.storage.node.field_location
     - field.storage.node.field_location_extra_info
     - field.storage.node.field_location_id
+    - field.storage.node.field_short_description
     - field.storage.node.field_start_time
     - field.storage.node.field_street_address
-    - field.storage.node.field_tags
     - field.storage.node.field_text
     - search_api.server.elastic
   module:
-    - taxonomy
     - node
+    - taxonomy
     - search_api
 id: event_index
 name: 'Event index'
@@ -39,6 +40,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_end_time
+  field_event_status:
+    label: 'Event status'
+    datasource_id: 'entity:node'
+    property_path: field_event_status
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_event_status
   field_event_tags:
     label: 'Event tags » Taxonomy term » Name'
     datasource_id: 'entity:node'
@@ -47,6 +56,17 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_event_tags
+      module:
+        - taxonomy
+  field_event_tags_id:
+    label: 'Event tags » Taxonomy term » ID'
+    datasource_id: 'entity:node'
+    property_path: 'field_event_tags:entity:field_id'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_event_tags
+        - field.storage.taxonomy_term.field_id
       module:
         - taxonomy
   field_id:
@@ -81,6 +101,28 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_in_language
+      module:
+        - taxonomy
+  field_in_language_id:
+    label: 'In Language » Taxonomy term » ID'
+    datasource_id: 'entity:node'
+    property_path: 'field_in_language:entity:field_id'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_in_language
+        - field.storage.taxonomy_term.field_id
+      module:
+        - taxonomy
+  field_language_id:
+    label: 'In Language » Taxonomy term » Language ID'
+    datasource_id: 'entity:node'
+    property_path: 'field_in_language:entity:field_language_id'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_in_language
+        - field.storage.taxonomy_term.field_language_id
       module:
         - taxonomy
   field_lead_in:
@@ -131,14 +173,6 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_street_address
-  field_tags:
-    label: Tags
-    datasource_id: 'entity:node'
-    property_path: field_tags
-    type: string
-    dependencies:
-      config:
-        - field.storage.node.field_tags
   field_text:
     label: Text
     datasource_id: 'entity:node'
@@ -212,16 +246,19 @@ processor_settings:
     all_fields: true
     fields:
       - entity_type
+      - field_event_status
       - field_event_tags
+      - field_event_tags_id
       - field_id
       - field_image_alt
       - field_image_url
       - field_in_language
+      - field_in_language_id
+      - field_language_id
       - field_lead_in
       - field_location
       - field_location_extra_info
       - field_street_address
-      - field_tags
       - field_text
       - langcode
       - title
@@ -241,7 +278,6 @@ processor_settings:
       preprocess_query: -20
     all_fields: false
     fields:
-      - field_tags
       - field_text
   language_with_fallback: {  }
   rendered_item: {  }
