--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
         "drupal/core-composer-scaffold": "^9.4",
         "drupal/easy_install": "^10.5",
         "drupal/entity_browser": "^2.8",
-        "drupal/focal_point": "^1.5",
         "drupal/gin": "3.0.0-beta5",
         "drupal/gin_toolbar": "1.0-beta22",
         "drupal/hdbt": "^5.0",
@@ -22,7 +21,7 @@
         "drupal/helfi_ahjo": "^1.0",
         "drupal/helfi_azure_fs": "^1.0",
         "drupal/helfi_drupal_tools": "dev-main",
-        "drupal/helfi_platform_config": "^3.0",
+        "drupal/helfi_platform_config": "dev-UHF-X-tyollisyyspalvelut-v3",
         "drupal/helfi_tpr": "^2.0",
         "drupal/helfi_tunnistamo": "^1.0",
         "drupal/jsonapi_extras": "3.23.0",
