THF-643: More config changes.

--- a/conf/cmi/core.entity_view_display.paragraph.from_library.default.yml
+++ b/conf/cmi/core.entity_view_display.paragraph.from_library.default.yml
@@ -11,4 +11,6 @@ targetEntityType: paragraph
 bundle: from_library
 mode: default
 content: {  }
-hidden: {  }
+hidden:
+  field_reusable_paragraph: true
+  search_api_excerpt: true
