--- a/conf/cmi/user.role.authenticated.yml
+++ b/conf/cmi/user.role.authenticated.yml
@@ -98,6 +98,7 @@ permissions:
   - 'view paragraph content phone_number_box'
   - 'view paragraph content quote'
   - 'view paragraph content remote_video'
+  - 'view paragraph content rss_feed'
   - 'view paragraph content search'
   - 'view paragraph content service_list'
   - 'view paragraph content sidebar_text'
