--- a/conf/cmi/user.role.jsonapi.yml
+++ b/conf/cmi/user.role.jsonapi.yml
@@ -92,6 +92,7 @@ permissions:
   - 'create paragraph content phone_number_box'
   - 'create paragraph content quote'
   - 'create paragraph content remote_video'
+  - 'create paragraph content rss_feed'
   - 'create paragraph content search'
   - 'create paragraph content service_list'
   - 'create paragraph content sidebar_text'
@@ -159,6 +160,7 @@ permissions:
   - 'delete paragraph content phone_number_box'
   - 'delete paragraph content quote'
   - 'delete paragraph content remote_video'
+  - 'delete paragraph content rss_feed'
   - 'delete paragraph content search'
   - 'delete paragraph content service_list'
   - 'delete paragraph content sidebar_text'
@@ -236,6 +238,7 @@ permissions:
   - 'update paragraph content phone_number_box'
   - 'update paragraph content quote'
   - 'update paragraph content remote_video'
+  - 'update paragraph content rss_feed'
   - 'update paragraph content search'
   - 'update paragraph content service_list'
   - 'update paragraph content sidebar_text'
