--- a/conf/cmi/core.entity_form_display.paragraph.rss_feed.default.yml
+++ b/conf/cmi/core.entity_form_display.paragraph.rss_feed.default.yml
@@ -4,11 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.rss_feed.field_background_color
+    - field.field.paragraph.rss_feed.field_rss_feed_description
     - field.field.paragraph.rss_feed.field_rss_feed_url
     - field.field.paragraph.rss_feed.field_rss_title
     - paragraphs.paragraphs_type.rss_feed
   module:
     - select2
+    - text
 id: paragraph.rss_feed.default
 targetEntityType: paragraph
 bundle: rss_feed
@@ -23,6 +25,14 @@ content:
       autocomplete: false
       match_operator: CONTAINS
       match_limit: 10
+    third_party_settings: {  }
+  field_rss_feed_description:
+    type: text_textarea
+    weight: 3
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
     third_party_settings: {  }
   field_rss_feed_url:
     type: string_textfield
@@ -41,7 +51,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
