--- a/conf/cmi/core.entity_view_display.paragraph.rss_feed.default.yml
+++ b/conf/cmi/core.entity_view_display.paragraph.rss_feed.default.yml
@@ -4,9 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.rss_feed.field_background_color
+    - field.field.paragraph.rss_feed.field_rss_feed_description
     - field.field.paragraph.rss_feed.field_rss_feed_url
     - field.field.paragraph.rss_feed.field_rss_title
     - paragraphs.paragraphs_type.rss_feed
+  module:
+    - text
 id: paragraph.rss_feed.default
 targetEntityType: paragraph
 bundle: rss_feed
@@ -19,6 +22,13 @@ content:
       link: true
     third_party_settings: {  }
     weight: 2
+    region: content
+  field_rss_feed_description:
+    type: text_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 3
     region: content
   field_rss_feed_url:
     type: string
